--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -14,5 +14,8 @@
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.6"
+  },
+  "dependencies": {
+    "alpinejs": "^3.10.3"
   }
 }
